feat: implement controlled secondary trading
